--- a/stule.css
+++ b/stule.css
@@ -16,7 +16,7 @@ a {
 }
 .div-1 {
     padding: 0 20px;
-    background-color: black;
+    background-color: rgba(40, 16, 16, 0.074);
     
 }
 body {
